# magscreen

./: .editorconfig  .gitignore  README.md  setup.cfg  setup.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
doc/: MWDM6L-15S-6K5-18L.xlsx  install.md
etc/: 99-twinleaf-usb.rules
mag_screen/: README.md  pyproject.toml  setup.py
mag_screen/scripts/: mag_screen  mag_screen_gui
mag_screen/vanscreen/: __init__.py  mag_screen.py
mag_shield/: README.md  README_2.md  com_example.py  install.md  mag_shield_testing.py  mag_shield_testing5.py  readme_orig.md
mag_shield/etc/: 99-twinleaf-usb.rules
mag_shield/scripts/: mag_screen
mag_shield/test/: com_example.py
mag_shield/vanscreen/: __init__.py
magscreen/: __init__.py  calc.py  common.py  feature_gui.py  mag_screen_gui.py  objectOrientedGUI.py  plot.py  refined_gui.py  screen.py  screen_gui.py  semcsv.py  summary.py  tlvmr.py
magscreen/.spyproject/config/: workspace.ini
test/: rot_test.py  rotation_test.py  screwdriver.csv  summary.csv
vanscreen/: __init__.py  calc.py  common.py  mag_screen.py  mag_screen_gui.py  mag_screen_plot.py  plot.py  plots.py  screen.py  semcsv.py  summary.py  tlvmr.py
