[metadata]
name = magscreen
description_file = README.md
version = 0.3
description = Collect magnetic stray field and dipole moments from small parts
author = C. Piker, C. Dorman
author_email = cole-dorman@uiowa.edu, chris-piker@uiowa.edu
url = https://research-git.uiowa.edu/space-physics/tracers/magic/utilities

[options]
packages = magscreen

python_requires = >=3.6

install_requires = 
	numpy
	scipy
	matplotlib
	tio 

[options.entry_points]
console_scripts = 
	mag_screen=magscreen.screen:main
	mag_screen_plot=magscreen.plot:main
	mag_screen_sum=magscreen.summary:main
	mag_screen_gui=magscreen.mag_screen_gui:main
