[metadata]
name = magscreen
description_file = README.md
version = 0.3
description = Magnetic cleanliness screening via constant rotation.
author = C. Piker, C. Dorman
author_email = cpiker@users.noreply.github.com, cjdorman@users.noreply.github.com
url = https://github.com/cpiker/magscreen

[options]
packages = magscreen

python_requires = >=3.6

install_requires = 
	numpy
	scipy
	matplotlib
	tio 

[options.entry_points]
console_scripts = 
	mag_screen=magscreen.screen:main
	mag_screen_plot=magscreen.plot:main
	mag_screen_sum=magscreen.summary:main
	mag_screen_gui=magscreen.mag_screen_gui:main
