[metadata]
name = magscreen
description = Magnetic cleanliness screening via constant rotation.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.3
author = C. Piker, C. Dorman
author_email = cpiker@users.noreply.github.com, cjdorman@users.noreply.github.com
url = https://github.com/cpiker/magscreen

[options]
packages = magscreen

python_requires = >=3.6

install_requires = 
	numpy
	scipy
	matplotlib
	tio 
	tkhtmlview

[options.entry_points]
console_scripts = 
	mag_screen=magscreen.screen:main
	mag_screen_plot=magscreen.plot:main
	mag_screen_sum=magscreen.summary:main
	mag_screen_gui=magscreen.screen_gui:GUI
